Fixed hover unvote click on mobile devices

--- a/www/css/mnm.css
+++ b/www/css/mnm.css
@@ -2497,9 +2497,6 @@ li .comment-header .comment-expand {
 
 .comment-footer .vote {
     font-size: 20px;
-}
-
-.comment-footer .vote:hover {
     color: #adcedf;
 }
 
@@ -2513,6 +2510,10 @@ li .comment-header .comment-expand {
 
 .comment-footer .vote.pending {
     opacity: 0.5;
+}
+
+.comment-footer .vote.up.unhover, .comment-footer .vote.down.unhover {
+    color: #adcedf;
 }
 
 .comment-footer .answers .counter {
